# src/validation/UserValidator.ts
@@ -1,4 +1,4 @@
-import { IUserLoginRequest, IUserPayload } from "../interface/user";
+import { IUserLoginRequest, IUserPayload, IProfileUpdate } from "../interface/user";
 import Joi, { ValidationResult } from "joi";
 
 export const validateUserSignup = (user: IUserPayload): ValidationResult => {
@@ -14,6 +14,15 @@ export const validateUserLogin = (user: IUserLoginRequest): ValidationResult => 
 	const schema = Joi.object({
 		email: Joi.string().email().min(5).max(255).required(),
 		password: Joi.string().min(5).max(30).required()
+	});
+	return schema.validate(user);
+};
+
+export const validateUserUpdate = (user: IProfileUpdate): ValidationResult => {
+	const schema = Joi.object({
+		username: Joi.string().min(5).max(20).required(),
+		bio: Joi.string().required(),
+		password: Joi.string().min(5).max(30)
 	});
 	return schema.validate(user);
 };
